istio/ingress-kiali-istio.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kiali
  namespace: istio-system
  labels:
    app: kiali
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: kiali-istio.demo.nalbam.com
    http:
      paths:
      - path: /
        backend:
          serviceName: kiali
          servicePort: 20001
  - host: kiali.istio.nalbam.com
    http:
      paths:
      - path: /
        backend:
          serviceName: kiali
          servicePort: 20001
